# proto-diagram-tool

./: .gitignore  BUILD.bazel  CONTRIBUTING.md  LICENSE  README.md  bazel-bin  bazel-out  bazel-proto-diagram-tool  bazel-testlogs  go.mod  go.sum  main.go  proto-diagram-tool
.github/workflows/: coverage.yml  main.yml
pkg/proto/: BUILD.bazel  annotation.go  annotation_test.go  attribute.go  attribute_test.go  attribute_visitor.go  attribute_visitor_test.go  comment.go  comment_test.go  comment_visitor.go  comment_visitor_test.go  constants.go  enum.go  enum_test.go  enum_value.go  enum_value_test.go  enum_value_visitor.go  enum_value_visitor_test.go  enum_visitor.go  enum_visitor_test.go  import.go  import_test.go  import_visitor.go  import_visitor_test.go  interfaces.go  line.go  line_test.go  logger.go  markdown.go  markdown_test.go  mermaid.go  message.go  message_test.go  message_visitor.go  message_visitor_test.go  model.go  model_test.go  option_visitor.go  option_visitor_test.go  package.go  (+42 more)
test/: parser_test.go
test/core/: BUILD.bazel  annotation_test.go  attribute_test.go  attribute_visitor_test.go  comment_test.go  comment_visitor_test.go  enum_test.go  enum_value_test.go  enum_value_visitor_test.go  enum_visitor_test.go  import_test.go  import_visitor_test.go  line_test.go  markdown_test.go  message_test.go  message_visitor_test.go  model_test.go  option_visitor_test.go  package_test.go  package_visitor_test.go  reserved_test.go  reserved_visitor_test.go  test_scanner.go  util_test.go
test/data/common/: google.retail.common.grpc.md  google.retail.common.pb.md  model.proto
test/data/enums/: google.retail.enums.climate.md  google.retail.enums.communication.md  google.retail.enums.countries.md  google.retail.enums.currency.md  google.retail.enums.geo.md  google.retail.enums.lang.md  google.retail.enums.locale.md  google.retail.enums.party.md  google.retail.enums.payment.md  google.retail.enums.time.md  google.retail.enums.uom.md
test/data/location/: google.retail.location.grpc.md  google.retail.location.pb.md  model.proto
test/data/test/: test.proto
test/protos/test/location/: model.proto  model.proto.md  service.proto
test/protos/test/service/: service.proto  service.proto.md
