load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "core",
    srcs = ["test_scanner.go"],
    importpath = "github.com/rrmcguinness/proto-diagram-tool/test/core",
    visibility = ["//visibility:public"],
    deps = ["//pkg/proto"],
)

go_test(
    name = "core_test",
    srcs = [
        "annotation_test.go",
        "attribute_test.go",
        "attribute_visitor_test.go",
        "comment_test.go",
        "comment_visitor_test.go",
        "enum_test.go",
        "enum_value_test.go",
        "enum_value_visitor_test.go",
        "enum_visitor_test.go",
        "import_test.go",
        "import_visitor_test.go",
        "line_test.go",
        "markdown_test.go",
        "message_test.go",
        "message_visitor_test.go",
        "model_test.go",
        "option_visitor_test.go",
        "package_test.go",
        "package_visitor_test.go",
        "reserved_test.go",
        "reserved_visitor_test.go",
        "util_test.go",
    ],
    data = ["data/input_test_file.txt"],
    embed = [":core"],
    deps = [
        "//pkg/proto",
        "@com_github_stretchr_testify//assert",
    ],
)
